Remove Register Route to be standard rest post endpoint
