# CardApplication/Document/api.yaml
@@ -1,67 +1,71 @@
 ---
-swagger: "2.0"
-info:
-  description: |
-    This is the API for card management
-  version: 1.0.0
-  title: Card Management
-  contact:
-    email: zhong.allen@gmail.com
-host: virtserver.swaggerhub.com
-basePath: /AllenZhong/CardManagement/1.0.0
-schemes:
+  swagger: "2.0"
+  info:
+    description: |
+      This is the API for card management
+    version: 1.0.0
+    title: Card Management
+    contact:
+      email: zhong.allen@gmail.com
+  host: virtserver.swaggerhub.com
+  basePath: /AllenZhong/CardManagement/1.0.0
+  schemes:
   - https
   - http
-paths:
-  /CreditCard:
-    post:
-      summary: Register a new card
-      operationId: Register
-      consumes:
+  paths:
+    /CreditCard:
+      post:
+        summary: Register a new card
+        operationId: Register
+        consumes:
         - application/json
-      produces:
+        produces:
         - application/json
-      parameters:
+        parameters:
         - in: body
           name: body
           description: Card object that will be stored
           required: true
           schema:
             $ref: '#/definitions/Card'
-      responses:
-        "204":
-          description: Card registered successfully
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-        "404":
-          description: Not Found.
-        "409":
-          description: Conflict. Card existing.
-    get:
-      summary: Get all registered credit cards
-      operationId: Get
-      consumes:
+        responses:
+          "204":
+            description: Card registered successfully
+          "400":
+            description: Bad Request
+            schema:
+              $ref: '#/definitions/ErrorResponse'
+          "401":
+            description: Unauthorized
+          "404":
+            description: Not Found.
+          "409":
+            description: Conflict. Card existing.
+      get:
+        summary: Get all registered credit cards
+        operationId: Get
+        consumes:
         - application/json
-      produces:
+        produces:
         - application/json
-      responses:
-        "200":
-          description: All registered card
-          schema:
-            $ref: '#/definitions/ListOfCards'
-        "400":
-          description: Bad Request
-  /CreditCard/{id}:
-    get:
-      summary: Get specified registered credit card
-      operationId: GetById
-      consumes:
+        responses:
+          "200":
+            description: All registered card
+            schema:
+              $ref: '#/definitions/ListOfCards'
+          "400":
+            description: Bad Request
+          "401":
+            description: Unauthorized
+    /CreditCard/{id}:
+      get:
+        summary: Get specified registered credit card
+        operationId: GetById
+        consumes:
         - application/json
-      produces:
+        produces:
         - application/json
-      parameters:
+        parameters:
         - name: id
           in: path
           description: registered card id
@@ -70,62 +74,64 @@ paths:
           maximum: 10.0
           minimum: 1.0
           format: int64
-      responses:
-        "200":
-          description: Get a registered card
-          schema:
-            $ref: '#/definitions/CardOutput'
-        "400":
-          description: Bad Request
-definitions:
-  Card:
-    type: object
-    properties:
-      id:
-        type: integer
-      name:
-        type: string
-        minLength: 3
-        maxLength: 50
-      cardNumber:
-        type: string
-        format: integer
-      cvc:
-        type: string
-        format: integer
-      expireDate:
-        type: string
-        format: date
-  CardOutput:
-    type: object
-    properties:
-      id:
-        type: integer
-      name:
-        type: string
-        minLength: 3
-        maxLength: 50
-      cardNumber:
-        type: string
-        format: integer
-      expiryDate:
-        type: string
-        format: date
-  ListOfCards:
-    type: array
-    items:
-      $ref: '#/definitions/CardOutput'
-  ErrorResponse:
-    type: object
-    properties:
-      type:
-        type: string
-        format: url
-      title:
-        type: string
-      status:
-        type: integer
-      traceId:
-        type: string
-      errors:
-        type: object
+        responses:
+          "200":
+            description: Get a registered card
+            schema:
+              $ref: '#/definitions/CardOutput'
+          "400":
+            description: Bad Request
+          "401":
+            description: Unauthorized
+  definitions:
+    Card:
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+          minLength: 3
+          maxLength: 50
+        cardNumber:
+          type: string
+          format: integer
+        cvc:
+          type: string
+          format: integer
+        expireDate:
+          type: string
+          format: date
+    CardOutput:
+      type: object
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+          minLength: 3
+          maxLength: 50
+        cardNumber:
+          type: string
+          format: integer
+        expiryDate:
+          type: string
+          format: date
+    ListOfCards:
+      type: array
+      items:
+        $ref: '#/definitions/CardOutput'
+    ErrorResponse:
+      type: object
+      properties:
+        type:
+          type: string
+          format: url
+        title:
+          type: string
+        status:
+          type: integer
+        traceId:
+          type: string
+        errors: 
+          type: object
